tests/baselines/reference/acceptableAlias1.errors.txt
acceptableAlias1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== acceptableAlias1.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module N {
        }
        export import X = N;
    }
    
    import r = M.X;